--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.6",
     "next": "^15.3.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-calendly": "^4.4.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.0"
   },
