updates secrets to be passed to container from github secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,6 +113,14 @@ jobs:
             # Login to GitHub Container Registry
             echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
             
+            # Create .env file with environment variables
+            cat > .env << 'ENVEOF'
+            RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}
+            RESEND_AUDIENCE_ID=${{ secrets.RESEND_AUDIENCE_ID }}
+            FROM_EMAIL=${{ secrets.FROM_EMAIL }}
+            TO_EMAIL=${{ secrets.TO_EMAIL }}
+            ENVEOF
+            
             # Run deployment script
             chmod +x scripts/deploy.sh
             APP_VERSION=${{ github.sha }} ./scripts/deploy.sh deploy
