--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,8 @@ services:
     container_name: sharons-website-blue
     ports:
       - "3001:3000"
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
       - APP_VERSION=${APP_VERSION:-latest}
@@ -28,6 +30,8 @@ services:
     container_name: sharons-website-green
     ports:
       - "3002:3000"
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
       - APP_VERSION=${APP_VERSION:-latest}
