--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
+    "@react-email/components": "^0.3.2",
+    "@react-email/render": "^1.1.3",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
