--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Load balancer configuration for blue-green deployment
+# nginx/nginx-ssl.conf - SSL-enabled load balancer configuration
 events {
     worker_connections 1024;
 }
@@ -23,14 +23,32 @@ http {
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
+    # HTTP to HTTPS redirect
     server {
         listen 80;
         server_name _;
+        return 301 https://$server_name$request_uri;
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        # SSL configuration
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         # Health check endpoint for deployment monitoring
         location /health {
