--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -23,11 +23,44 @@ http {
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
-    # HTTP to HTTPS redirect
+    # HTTP to HTTPS redirect with health check exceptions
     server {
         listen 80;
         server_name _;
-        return 301 https://$server_name$request_uri;
+        
+        # Health check endpoints (no redirect for deployment monitoring)
+        location /health {
+            access_log off;
+            proxy_pass http://app_servers/api/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Quick health check timeout
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 5s;
+            proxy_read_timeout 5s;
+        }
+
+        # Blue environment health check
+        location /health/blue {
+            access_log off;
+            proxy_pass http://blue_upstream/api/health;
+            proxy_set_header Host $host;
+        }
+
+        # Green environment health check
+        location /health/green {
+            access_log off;
+            proxy_pass http://green_upstream/api/health;
+            proxy_set_header Host $host;
+        }
+        
+        # Redirect all other traffic to HTTPS
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
     }
 
     # HTTPS server
