Use HTTPS for all health checks instead of HTTP exceptions - cleaner and more secure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -130,7 +130,7 @@ jobs:
           sleep 30
           
           # Check if the application is responding
-          if curl -f -s "http://${{ secrets.SERVER_HOST }}/health"; then
+          if curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health"; then
             echo "✅ Deployment successful!"
           else
             echo "❌ Deployment verification failed"
