Fix deployment verification to use HTTP for IP-based server access

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,8 +129,8 @@ jobs:
           # Wait for deployment to stabilize
           sleep 30
           
-          # Check if the application is responding
-          if curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health"; then
+          # Check if the application is responding (use HTTP for IP-based access)
+          if curl -f -s "http://${{ secrets.SERVER_HOST }}/health"; then
             echo "✅ Deployment successful!"
           else
             echo "❌ Deployment verification failed"
