--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -27,7 +27,7 @@ http {
     server {
         listen 80;
         server_name _;
-        return 301 https://$server_name$request_uri;
+        return 301 https://$host$request_uri;
     }
 
     # HTTPS server
