--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,13 +129,23 @@ jobs:
           # Wait for deployment to stabilize
           sleep 30
           
-          # Check if the application is responding (try both environments)
-          if curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health/green" || curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health/blue"; then
-            echo "✅ Deployment successful!"
-          else
-            echo "❌ Deployment verification failed"
-            exit 1
-          fi
+                      # Check if the application is responding through main endpoint
+            echo "Waiting for deployment to stabilize..."
+            sleep 30
+            
+            if curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health"; then
+              echo "✅ Deployment successful!"
+            else
+              echo "❌ Deployment verification failed - checking individual environments"
+              if curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health/green"; then
+                echo "⚠️ Green environment is healthy but main endpoint failed"
+              elif curl -f -s -k "https://${{ secrets.SERVER_HOST }}/health/blue"; then
+                echo "⚠️ Blue environment is healthy but main endpoint failed"
+              else
+                echo "❌ Both environments failed"
+              fi
+              exit 1
+            fi
 
   notify:
     name: Notify Deployment Status
