--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:email": "email dev --dir ./emails",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -29,7 +30,9 @@
     "typescript": "^5.2.0"
   },
   "devDependencies": {
+    "@react-email/preview-server": "^4.2.7",
     "eslint": "^8.51.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "react-email": "^4.2.7"
   }
 }
