--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:email": "email dev --dir ./emails",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix"
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
+    "@react-email/components": "^0.3.2",
+    "@react-email/render": "^1.1.3",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -27,7 +30,9 @@
     "typescript": "^5.2.0"
   },
   "devDependencies": {
+    "@react-email/preview-server": "^4.2.7",
     "eslint": "^8.51.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "react-email": "^4.2.7"
   }
 }
