Refactor blog components and improve layout
- Updated BlogPost and BlogMetadata components for better structure and reusability.
- Enhanced BlogHeader for responsive design and improved styling.
- Adjusted layout in TheSession component for better visual hierarchy.
- Refined CSS variables for fluid typography in globals.css.
- Updated image handling in next.config.js for optimized loading.
- Minor adjustments in various components for consistency and readability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[typescriptreact]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
@@ -24,11 +24,13 @@
   "[css]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-
-    "audioCues.lineHasError": "off",
-    "audioCues.lineHasWarning": "off",
-    "audioCues.lineHasInlineSuggestion": "off",
     "accessibility.signals.lineHasError": {
+      "sound": "off"
+    },
+    "accessibility.signals.lineHasWarning": {
+      "sound": "off"
+    },
+    "accessibility.signals.lineHasInlineSuggestion": {
       "sound": "off"
     }
 
