--- a/.github/variables.env.yml
+++ b/.github/variables.env.yml
@@ -5,36 +5,33 @@
 secrets:
   # GitHub Container Registry Authentication
   PERSONAL_GITHUB_TOKEN:
-    description: "Personal access token for GitHub Container Registry"
+    description: 'Personal access token for GitHub Container Registry'
     required: true
 
   # SSH Deployment
   SSH_PRIVATE_KEY:
-    description: "SSH private key for server access"
+    description: 'SSH private key for server access'
     required: true
   SSH_USER:
-    description: "SSH username for server access"
+    description: 'SSH username for server access'
     required: true
   SERVER_HOST:
-    description: "Deployment server hostname"
+    description: 'Deployment server hostname'
     required: true
 
   # Email Configuration
   RESEND_API_KEY:
-    description: "Resend API key for email services"
+    description: 'Resend API key for email services'
     required: true
   RESEND_AUDIENCE_ID:
-    description: "Resend audience ID for newsletters"
+    description: 'Resend audience ID for newsletters'
     required: true
   FROM_EMAIL:
-    description: "Sender email address"
+    description: 'Sender email address'
     required: true
   TO_EMAIL:
-    description: "Recipient email address"
+    description: 'Recipient email address'
     required: true
-
 # Note: This file is for documentation purposes and IDE support.
 # The actual secret values should be configured in GitHub repository settings.
-
-
 
