--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,7 @@ services:
     image: ghcr.io/marlinjai/sharons-website:${APP_VERSION:-latest}
     container_name: sharons-website-blue
     ports:
-      - "3001:3000"
+      - '3001:3000'
     env_file:
       - .env
     environment:
@@ -14,7 +14,7 @@ services:
       - APP_VERSION=${APP_VERSION:-latest}
       - DEPLOYMENT_SLOT=blue
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000/api/health']
       interval: 30s
       timeout: 10s
       retries: 3
@@ -28,7 +28,7 @@ services:
     image: ghcr.io/marlinjai/sharons-website:${APP_VERSION:-latest}
     container_name: sharons-website-green
     ports:
-      - "3002:3000"
+      - '3002:3000'
     env_file:
       - .env
     environment:
@@ -36,7 +36,7 @@ services:
       - APP_VERSION=${APP_VERSION:-latest}
       - DEPLOYMENT_SLOT=green
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000/api/health']
       interval: 30s
       timeout: 10s
       retries: 3
@@ -50,8 +50,8 @@ services:
     image: nginx:alpine
     container_name: sharons-website-nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - '80:80'
+      - '443:443'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
@@ -64,4 +64,4 @@ services:
 
 networks:
   app-network:
-    driver: bridge 
+    driver: bridge
