--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yoga-studio-clone",
-  "version": "0.1.0",
+  "name": "sharons-website",
+  "version": "0.9.0",
   "private": true,
   "engines": {
     "node": ">=20.0.0",
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@react-email/preview-server": "^4.2.7",
+    "@wixc3/react-board": "^4.6.2",
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0",
     "prettier": "^3.6.2",
