Update project details and enhance UI components
- Changed project name from "yoga-studio-clone" to "sharons-website" and updated version to 0.9.0 in package files.
- Added GSAP library for improved animations.
- Refined Hero component to display text immediately instead of using animation effects for better user engagement.
- Enhanced global styles with a new glassmorphism effect for a modern UI look.
- Simplified DesktopNav component by integrating dropdown logic into Navigation.tsx, improving maintainability.
- Introduced NavBlobShape component for a morphing navigation effect, enhancing the user experience.
- Updated NavLink component styles for better visibility and consistency across different states.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.14.2",
     "next": "^15.3.3",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
