fix: update ESLint to v9 for Next.js 16 compatibility

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:email": "email dev --dir ./emails",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix",
+    "lint": "next lint",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -40,8 +40,8 @@
   "devDependencies": {
     "@react-email/preview-server": "^5.1.1",
     "@wixc3/react-board": "^4.6.2",
-    "eslint": "^8.51.0",
-    "eslint-config-next": "14.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "prettier": "^3.6.2",
     "react-email": "^5.1.1"
   }
