--- a/nginx/nginx-ssl.conf
+++ b/nginx/nginx-ssl.conf
@@ -4,6 +4,33 @@ events {
 }
 
 http {
+    # Cloudflare IP ranges for real client IP restoration
+    # IPv4
+    set_real_ip_from 103.21.244.0/22;
+    set_real_ip_from 103.22.200.0/22;
+    set_real_ip_from 103.31.4.0/22;
+    set_real_ip_from 104.16.0.0/13;
+    set_real_ip_from 104.24.0.0/14;
+    set_real_ip_from 108.162.192.0/18;
+    set_real_ip_from 131.0.72.0/22;
+    set_real_ip_from 141.101.64.0/18;
+    set_real_ip_from 162.158.0.0/15;
+    set_real_ip_from 172.64.0.0/13;
+    set_real_ip_from 173.245.48.0/20;
+    set_real_ip_from 188.114.96.0/20;
+    set_real_ip_from 190.93.240.0/20;
+    set_real_ip_from 197.234.240.0/22;
+    set_real_ip_from 198.41.128.0/17;
+    # IPv6
+    set_real_ip_from 2400:cb00::/32;
+    set_real_ip_from 2606:4700::/32;
+    set_real_ip_from 2803:f800::/32;
+    set_real_ip_from 2405:b500::/32;
+    set_real_ip_from 2405:8100::/32;
+    set_real_ip_from 2a06:98c0::/29;
+    set_real_ip_from 2c0f:f248::/32;
+    real_ip_header CF-Connecting-IP;
+
     upstream app_servers {
         # Blue-green deployment - initially point to blue
         server app-blue:3000 max_fails=3 fail_timeout=30s;
@@ -26,15 +53,27 @@ http {
     # HTTP to HTTPS redirect
     server {
         listen 80;
-        server_name _;
-        return 301 https://$host$request_uri;
+        server_name returnhypnosis.com www.returnhypnosis.com;
+        return 301 https://returnhypnosis.com$request_uri;
     }
 
-    # HTTPS server
+    # Redirect www to non-www
     server {
         listen 443 ssl;
         http2 on;
-        server_name _;
+        server_name www.returnhypnosis.com;
+
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        return 301 https://returnhypnosis.com$request_uri;
+    }
+
+    # Main HTTPS server
+    server {
+        listen 443 ssl;
+        http2 on;
+        server_name returnhypnosis.com;
 
         # SSL configuration
         ssl_certificate /etc/nginx/ssl/cert.pem;
@@ -59,7 +98,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Quick health check timeout
             proxy_connect_timeout 5s;
             proxy_send_timeout 5s;
@@ -83,18 +122,18 @@ http {
         # API endpoints with rate limiting
         location ~ ^/api/ {
             limit_req zone=api burst=20 nodelay;
-            
+
             proxy_pass http://app_servers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Timeouts
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
-            
+
             # Buffer settings
             proxy_buffering on;
             proxy_buffer_size 128k;
@@ -109,12 +148,12 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
+
             # Timeouts
             proxy_connect_timeout 30s;
             proxy_send_timeout 30s;
             proxy_read_timeout 30s;
-            
+
             # Buffer settings
             proxy_buffering on;
             proxy_buffer_size 128k;
@@ -129,4 +168,4 @@ http {
             add_header Cache-Control "public, immutable";
         }
     }
-} 
+}
