--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,13 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-/public/images/raws/*
+
+# RAW image files - should not be deployed
+/public/images/raws/
+*.CR3
+*.cr3
+*.tif
+*.TIF
 
 .DS_Store
 .cursor
