--- a/package.json
+++ b/package.json
@@ -13,25 +13,33 @@
     "start": "next start",
     "lint": "echo 'Linting temporarily disabled - ESLint 9 migration pending'",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "migrate:posts": "ts-node --compiler-options '{\"module\":\"commonjs\"}' scripts/migrate-posts.ts"
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
     "@react-email/components": "^0.3.2",
     "@react-email/render": "^1.1.3",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
+    "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.23.12",
     "gsap": "^3.14.2",
+    "jsonwebtoken": "^9.0.3",
     "next": "^16.1.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-calendly": "^4.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.7.0",
     "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.0",
@@ -43,6 +51,7 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "14.0.0",
     "prettier": "^3.6.2",
-    "react-email": "^5.1.1"
+    "react-email": "^5.1.1",
+    "ts-node": "^10.9.2"
   }
 }
