feat: redesign post editor with modern UI and AI assistant
- Larger content editor (600px min-height)
- Clean, spacious design with better typography
- Collapsible metadata section
- Sticky header with save buttons
- Toggle switch for publish status
- AI assistant sidebar with:
  - Quick actions (improve, concise, expand, grammar, conclusion)
  - Custom prompt input
  - Insert/copy AI results
- OpenAI GPT-4o-mini integration
- Refined color palette and shadows

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ AWS_REGION=
 # Resend API (for newsletter)
 RESEND_API_KEY=your-resend-api-key
 
+# OpenAI API (optional - for AI writing assistant)
+OPENAI_API_KEY=your-openai-api-key
+
