--- a/.github/variables.env.yml
+++ b/.github/variables.env.yml
@@ -32,7 +32,12 @@ secrets:
   TO_EMAIL:
     description: 'Recipient email address'
     required: true
+
+  # Cal.com Integration
+  CALCOM_WEBHOOK_SECRET:
+    description: 'Cal.com webhook signing secret for verifying booking events'
+    required: false # App works without it but skips signature verification
+
 # Note: This file is for documentation purposes and IDE support.
 # The actual secret values should be configured in GitHub repository settings.
-
 
