--- a/package.json
+++ b/package.json
@@ -20,6 +20,17 @@
     "@calcom/embed-react": "^1.5.3",
     "@react-email/components": "^0.3.2",
     "@react-email/render": "^1.1.3",
+    "@tiptap/extension-color": "^2.10.0",
+    "@tiptap/extension-highlight": "^2.10.0",
+    "@tiptap/extension-image": "^2.10.0",
+    "@tiptap/extension-link": "^2.10.0",
+    "@tiptap/extension-placeholder": "^2.10.0",
+    "@tiptap/extension-text-align": "^2.10.0",
+    "@tiptap/extension-text-style": "^2.10.0",
+    "@tiptap/extension-underline": "^2.10.0",
+    "@tiptap/pm": "^2.10.0",
+    "@tiptap/react": "^2.10.0",
+    "@tiptap/starter-kit": "^2.10.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.10",
@@ -39,7 +50,6 @@
     "react-calendly": "^4.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-quill-new": "^3.7.0",
     "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.0",
