--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@calcom/embed-react": "^1.5.3",
     "@react-email/components": "^0.3.2",
     "@react-email/render": "^1.1.3",
+    "@tiptap/extension-bubble-menu": "^2.27.2",
     "@tiptap/extension-color": "^2.10.0",
     "@tiptap/extension-highlight": "^2.10.0",
     "@tiptap/extension-image": "^2.10.0",
